# C-practice

HW1/: CMakeLists.txt
HW1/include/: hw1.h
HW1/src/: hw1.cpp  main.cpp  unit_test.cpp
HW2/: CMakeLists.txt
HW2/include/: client.h  crypto.h  server.h
HW2/src/: client.cpp  main.cpp  server.cpp  unit_test.cpp
